# SSNE_LAB

./: .gitignore  pyproject.toml
compositor_classification/: data_utils.py  engine.py  main.py  model.py  pred.csv  predict.py  sweep.py
house_val_prediction/: Ostaszewski_Mateusz_Sadowski_Michał.ipynb  config.py  data_preparation.py  engine.py  experiment.py  main.py  model.py  predict_test.py  sweep_runner.py
image_classification/: Ostaszewski_Mateusz_Sadowski_Michał.ipynb  data.py  engine.py  inference.py  main.py  models.py  run_colab.ipynb  sweep_runner.py  test_models.py
mini_projekt_1/: Ostaszewski_Sadowski.ipynb  class Solution:.py
sentiment_classifier/: sentiment.ipynb
trafic_signs/: data.py  data_utils.py  eda.ipynb  engine.py  main.py  models.py  pack_imgs.py  utils.py
